# Visioneer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/images/: README.md
resources/internal/: imgui.ini
resources/models/: PSPNet_PascalVOC.onnx  README.md  UltraFace-640-sim.onnx  UltraFace.onnx  YOLOX_M.onnx
src/Visioneer/Augmentors/: Augmentor.cpp  Augmentor.h  GammaCorrection.cpp  GammaCorrection.h  GaussianBlur.cpp  GaussianBlur.h  GaussianNoise.cpp  GaussianNoise.h
src/Visioneer/Core/: Annotation.h  AnnotationRenderer.cpp  AnnotationRenderer.h  Application.cpp  Application.h  Base.h  EntryPoint.cpp  Logger.cpp  Logger.h  Texture.cpp  Texture.h
src/Visioneer/ImGui/: CustomWidgets.cpp  CustomWidgets.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/Visioneer/Models/: Model.h  PSPNet.cpp  PSPNet.h  UltraFace.cpp  UltraFace.h  Utilities.cpp  Utilities.h  YOLOX.cpp  YOLOX.h
src/Visioneer/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ImageAugmentationPanel.cpp  ImageAugmentationPanel.h  ModelsControlPanel.cpp  ModelsControlPanel.h  ViewerPanel.cpp  ViewerPanel.h
